k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-local-weather-api
  labels:
    app.kubernetes.io/name: weather-api
